k8's stuffs/project_deployment_templates/Gateway-API-Traefik/proeject_based_demo/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: employee-info
spec:
  clusterIP: None  # Important for StatefulSet
  ports:
    - port: 3306
  selector:
    app: mysql
