k8's stuffs/project_deployment_templates/Gateway-API-Traefik/proeject_based_demo/gatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: employee-gateway-route
  namespace: employee-info
spec:
  parentRefs:
    - name: traefik-gateway
      # namespace: employee-info
      sectionName: http
      kind: Gateway
  # hostnames:
  #   - "employee-app.com"
  rules:
    - matches:
        - method: GET
        - method: POST
        - method: PUT
        - method: PATCH
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - method: GET
        - method: POST
        - method: PUT
        - method: PATCH
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 5000
          # weight: 100
